refactor: modernize codebase to Java 21 standards
Modernize the entire JPM codebase to use Java 21 features:

Records (Java 16+):
- Convert 9 data classes to records (CompileResult, RunResult, ArtifactSpec,
  SearchResult, ResolvedDependency, Dependency, LockfileEntry, DependencyInfo,
  PackageConfig)
- Eliminates ~180 lines of boilerplate code
- Automatic equals(), hashCode(), toString() generation

Modern APIs:
- Replace deprecated URLEncoder.encode(String, String) with
  URLEncoder.encode(String, StandardCharsets.UTF_8)
- Replace String.getBytes() with String.getBytes(StandardCharsets.UTF_8)
- Replace String.trim().isEmpty() with String.isBlank() (Unicode-aware)

Text Blocks (Java 15+):
- AddCommand.generateProjectFile() now uses text blocks with .formatted()

Var Keyword:
- Use 'var' keyword for ~110 local variable declarations where type is obvious
- Improves readability and reduces visual noise

Record Accessor Methods:
- Update all record field access to use accessor methods
- e.g., dep.groupId -> dep.groupId()

Benefits:
- 180+ lines of code removed
- Better Unicode support (isBlank, strip)
- Improved type safety with records
- Modern Java style throughout

Documentation:
- Added JAVA21_MODERNIZATION.md with complete details